# Crypto-Quant-Nexus

./: .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.api  LICENSE  Makefile  README.md  SHOWCASE.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  mlops-nightly.yml
.streamlit/: config.toml
alpha-terminal/: README.md  app.py  main.py
api/: __init__.py  main.py
docs/: COPILOT.md  FORWARD_DEPLOYED.md  RESEARCH.md  deploy-render.md
flow-alpha/: README.md  app.py  main.py  requirements.txt
funding-radar/: README.md  app.py  main.py
mlops/configs/: fusion_weights.yaml
mlops/contracts/: features.yaml
mlops/training/: train_flow_alpha.py  train_regime_nexus.py
mm-engine/: README.md  app.py  main.py
nexus-hub/: app.py  main.py
ops-dashboard/: app.py  main.py
quant_core/: __init__.py  audit.py  brand.py  canary.py  data.py  deploy.py  eventing.py  events_store.py  execution.py  feature_store.py  logging_config.py  metrics.py  observability.py  options.py  orderbook.py  portfolio.py  shadow.py  theme.py
quant_core/copilot/: __init__.py  indexer.py  llm.py  models.py  retriever.py  service.py  sources.py  ui_streamlit.py
quant_core/ml/: __init__.py  flow_model.py  model_card.py  regime_model.py  tracking.py
regime-nexus/: README.md  app.py  main.py
scripts/: cache_universe.py  train_all.py
tests/: test_api.py  test_audit_signing.py  test_canary.py  test_copilot.py  test_data.py  test_execution_portfolio.py  test_feature_store.py  test_hub_urls.py  test_metrics.py  test_ml.py  test_options.py  test_orderbook.py  test_platform.py  test_research.py  test_shadow_audit.py
vol-surface/: README.md  app.py  main.py
worker/: inference_worker.py
(+8 files in other folders)
