[project]
name = "crypto-quant-nexus"
version = "3.0.0"
description = "Institutional-style crypto quant analytics with DevOps and MLOps"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rushi Dave" }]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"mlops/training/*.py" = ["E402"]
"quant_core/theme.py" = ["F541"]

[tool.coverage.run]
source = ["quant_core", "api"]
